apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 2
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.31.0
          ports:
            - containerPort: 9090
          volumeMounts:
            - pathMount: /etc/linkding/data
              name: linkding-volume 
      volumes:
        - name: linkding-volume
          persistentVolumeClaim:
            claimName: linkding-volume
